--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ dependencies = [
     "anthropic>=0.49.0",
     "google-genai>=1.5.0",
     "ipykernel>=6.29.5",
+    "langchain>=0.3.21",
+    "langchain-openai>=0.3.9",
     "langfuse>=2.59.7",
     "load-dotenv>=0.1.0",
+    "numpy>=2.2.3",
     "openai>=1.66.3",
+    "pillow>=11.1.0",
     "streamlit>=1.43.1",
 ]
